Smooth Scroll Basic

--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -781,7 +781,7 @@ section
 	width: 39px;
 	height: 39px;
 	border-radius: 50%;
-	background: #ce112b;
+	background: #59234d;
 	font-size: 19.2px;
 	font-weight: 500;
 	color: #FFFFFF;
