--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -394,8 +394,8 @@ section
 }
 .logo > div span
 {
-	font-weight: 300;
-	text-transform: uppercase;
+	font-weight: 700;
+	/*text-transform: uppercase*/;
 }
 
 .logo img{height:50px;}
