--- a/EtchNew/sass/style.scss
+++ b/EtchNew/sass/style.scss
@@ -8,7 +8,7 @@ $grid-gutter-width: 40px !default;
 $border-radius-base:  4px !default;
 $padding-base-vertical: 14px !default;
 
-$brand-primary: #FF9000 !default;
+$brand-primary: red !default;
 
 $brand-white: #fff;
 $brand-black: #000;
