--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -1163,7 +1163,7 @@ section
 {
 	display: block;
 	width: 100%;
-	background: #262626;
+	background:black;
 	padding-top: 70px;
 	border-top: solid 1px #88591d;
 	padding-bottom: 20px;
