--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -1321,3 +1321,112 @@ section
 	text-shadow:rgba(0, 0, 0,0.7);
 	color:white;
 }
+
+/*********************************
+13. Preloader
+*********************************/
+.preloader{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #fff;
+	transition: 1s;
+	z-index: 800;
+}
+.preloader::before{
+	content:'';
+	position: absolute;
+	left: 0;
+	width: 50%;
+	height: 100%;
+	background: #000;
+	transition: 1s;
+}
+.preloader.complete::before{
+	left: -50%;
+}
+.preloader::after{
+	content:'';
+	position: absolute;
+	right: 0;
+	width: 50%;
+	height: 100%;
+	background: #000;
+	transition: 1s;
+}
+.preloader.complete::after{
+	right: -50%;
+}
+.preloader.complete{
+	opacity: 0;
+	visibility: hidden;
+	pointer-events: none;
+}
+.loading{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	width: 100px;
+	height: 100px;
+	-webkit-animation: flickerAnimation 1s infinite;
+	-moz-animation: flickerAnimation 1s infinite;
+	-o-animation: flickerAnimation 1s infinite;
+	 animation: flickerAnimation 1s infinite;
+	background: none;
+	z-index: 801;
+}
+.pre-img{
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+}
+/* .loading::before{
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	animation: animateBG 2s linear infinite;
+} */
+@keyframes animate{
+	0%{
+		transform: translate(-50%,-50%) rotate(0deg);
+	}
+	25%{
+		transform: translate(-50%,-50%) rotate(180deg);
+	}
+	50%{
+		transform: translate(-50%,-50%) rotate(180deg);
+	}
+	75%{
+		transform: translate(-50%,-50%) rotate(360deg);
+	}
+	100%{
+		transform: translate(-50%,-50%) rotate(360deg);
+	}
+}
+@keyframes flickerAnimation {
+	0%   { opacity:1; }
+	50%  { opacity:0; }
+	100% { opacity:1; }
+  }
+  @-o-keyframes flickerAnimation{
+	0%   { opacity:1; }
+	50%  { opacity:0; }
+	100% { opacity:1; }
+  }
+  @-moz-keyframes flickerAnimation{
+	0%   { opacity:1; }
+	50%  { opacity:0; }
+	100% { opacity:1; }
+  }
+  @-webkit-keyframes flickerAnimation{
+	0%   { opacity:1; }
+	50%  { opacity:0; }
+	100% { opacity:1; }
+  }
